# DataVisible

./: .gitignore  README.md  generate-icons.js  index.html  package-lock.json  package.json  启动.bat
css/: styles.css
css/components/: perspective.css
js/: app.js  chartColorsConfig.js  chartOptions.js  chartRenderer.js  dataManager.js
js/charts/: advancedCharts.js  basicCharts.js  charts3D.js  comboCharts.js  comparisonCharts.js  financialCharts.js  specialCharts.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
