[package]
name = "datavisible"
version = "1.0.0"
description = "DataVisible - 数据可视化平台"
authors = ["Shu Leo"]
edition = "2021"

[lib]
name = "datavisible_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
